--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@ html, body {
 .navbar {
     height: 50px;
     line-height: 50px;
-    box-shadow: 0px 1px 1px rgba(0,0,0,0.2);
 }
 .nav-title {
     margin-left: 20px;
@@ -25,6 +24,7 @@ html, body {
 .landing {
     margin: auto;
     width: 100%;
+    height: 600px;
     text-align: center;
 }
 .container {
@@ -40,4 +40,7 @@ html, body {
 .content-title {
     text-align: center;
     padding-top: 40px;
+}
+.footer {
+    background: #2c3e50;
 }
