Fixed disqus. Added rangebar in landing content.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,10 +59,12 @@ a {
 .landing-title {
     font-size: 80px;
     font-weight: bold;
-    padding-top: 80px;
+    padding-top: 120px;
 }
 .landing-content {
     padding-bottom: 60px;
+    font-size: 18px;
+    padding-top: 20px;
 }
 .container {
 }
@@ -98,4 +100,115 @@ a {
 /**/
 .footer {
     background;;
+}
+
+
+.rangebar {
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 60%; /* Specific width is required for Firefox. */
+  margin: auto;
+  background: transparent; /* Otherwise white in Chrome */
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent; 
+  border-color: transparent;
+  color: transparent;
+}
+
+/* Special styling for WebKit/Blink */
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #2C3E50;
+  cursor: pointer;
+  margin-top: -14px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+}
+
+/* All the same stuff for Firefox */
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 3px 0px #f39c12;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+/* All the same stuff for IE */
+input[type=range]::-ms-thumb {
+  box-shadow: 0px 3px 0px #f39c12;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  box-shadow: 0px 3px 0px #f39c12;
+  background: #F1C40F;
+  border-radius: 1.3px;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #F1C40F;
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  box-shadow: 0px 3px 0px #f39c12;
+  background: #F1C40F;
+  border-radius: 1.3px;
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #F1C40F;
+  border-radius: 2.6px;
+  box-shadow: 0px 3px 0px #f39c12;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #F1C40F;
+}
+input[type=range]::-ms-fill-upper {
+  background: #F1C40F;
+  border-radius: 2.6px;
+  box-shadow: 0px 3px 0px #f39c12;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #F1C40F;
 }
